# xls2json

./: README.md  pyproject.toml
tests/: test_xls2json.py
xls2json/: __init__.py  command_line.py
